update_streamlit_photos

--- a/style/form_style.css
+++ b/style/form_style.css
@@ -1,3 +1,16 @@
+button[type=submit] {
+  background-color: #aa210f;
+  color: rgb(251,190,91);
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* When moving the mouse over the submit button, add a darker green color */
+button[type=submit]:hover {
+  background-color: #1e9ae0;
+}
   #MainMenu {visibility: hidden;}
   footer {visibility: hidden;}
   header {visibility: hidden;}
