--- a/style/form_style.css
+++ b/style/form_style.css
@@ -1,5 +1,5 @@
 button[type=submit] {
-  background-color: #aa210f;
+  /* background-color: #aa210f; */
   color: rgb(251,190,91);
   padding: 12px 20px;
   border: none;
