--- a/style/form_style.css
+++ b/style/form_style.css
@@ -16,5 +16,7 @@ button[type=submit] {
 footer {visibility: hidden;}
 header {visibility: hidden;}
 
+.viewerBadge_link__qRIco {visibility: hidden;}
+
 
   
